--- a/app/pages/patient-detail/patient-detail.html
+++ b/app/pages/patient-detail/patient-detail.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the PatientDetailPage page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 
 <ion-navbar *navbar>
   <button menuToggle *ngIf="!patient">
@@ -14,10 +8,11 @@
 
 <ion-content padding class="patient-detail">
  <div *ngIf="patient" class="selection">
-
   <ion-col>
-      		Arrow
+      		Arrow here
   </ion-col>
+
+
 
     <ion-container>
          <ion-item>
@@ -30,52 +25,69 @@
              </ion-item-content>
          </ion-item>
 
-         <ion-row class="bottom-detail">
-		    <ion-col width-30 class="bordered">
-		      <p class="personal-detail"><strong>TIME</strong> <br><span class="appt-details">{{patient.appointmentTime}}</span></p>
-		    </ion-col>
-		     <ion-col width-30 class="bordered">
-		        <p class="personal-detail"><strong>DOB</strong><br><span class="appt-details">{{patient.dob}}</span></p>
-		    </ion-col>
-		     <ion-col width-30 class="bordered">
-		        <p class="personal-detail"><strong>ID NUMBER</strong><br><span class="appt-details">{{patient.idNumber}}</span></p>
-		    </ion-col>
-		</ion-row>
+        <ion-row class="bottom-detail">
+  		    <ion-col width-30 class="bordered">
+  		      <p class="personal-detail"><strong>TIME</strong> <br><span class="appt-details">{{patient.appointmentTime}}</span></p>
+  		    </ion-col>
+  		     <ion-col width-30 class="bordered">
+  		        <p class="personal-detail"><strong>DOB</strong><br><span class="appt-details">{{patient.dob}}</span></p>
+  		    </ion-col>
+  		     <ion-col width-30 class="bordered">
+  		        <p class="personal-detail"><strong>ID NUMBER</strong><br><span class="appt-details">{{patient.idNumber}}</span></p>
+  		    </ion-col>
+		  </ion-row>
 
- 		<ion-row class="bottom-detail">
-		    <button class="button button-block block-btn">Verify</button>
-		</ion-row>
+   		<ion-row class="bottom-detail">
+  		    <button class="button button-block block-btn" (click)="verified($event)">Verify</button>
+      
+   <!--  <div>
+      <button [class.my-class]="!isClassVisible" (click)="isClassVisible = !isClassVisible;">
+        Verify
+      </button>
+    </div> -->
+  		
+      </ion-row>
 
 
-
-
-<!--          <a href="tel:{{employee.phone}}" ion-item>
-             <icon call item-left></icon>
-             <h2>Call Office</h2>
-             <p>{{employee.phone}}</p>
-         </a>
-         <a href="tel:{{employee.phone}}" ion-item>
-             <icon call item-left></icon>
-             <h2>Call Mobile</h2>
-             <p>{{employee.mobilePhone}}</p>
-         </a>
-         <a href="tel:{{employee.phone}}" ion-item>
-             <icon text item-left></icon>
-             <h2>Text</h2>
-             <p>{{employee.mobilePhone}}</p>
-         </a>
-         <a href="mailto:{{employee.email}}" ion-item>
-             <icon mail item-left></icon>
-             <h2>Email</h2>
-             <p>{{employee.email}}</p>
-         </a>
- -->
-     </ion-container>
-
+    </ion-container>
  </div>
 
+<div class="selection">
+<ion-col>
+          Patient Forms
+  </ion-col>
+<ion-container>
+  <ion-row>
+   <ion-col width-30>
+      <ion-card text-center>
+        <ion-card-header>HIPAA</ion-card-header>
+        <img class="logo" src="images/consent-small.svg" />
+        <ion-row>
+         <p class="bottom-stat">Signed</p>
+        </ion-row>
+    </ion-card>
+  </ion-col>
+
+  <ion-col width-30>
+      <ion-card text-center>
+        <ion-card-header>Consent to Care</ion-card-header>
+        <img class="logo" src="images/consent-small.svg" />
+        <ion-row>
+         <p class="bottom-stat incomplete">Incomplete</p>
+        </ion-row>
+    </ion-card>
+  </ion-col>
+
+  <ion-col width-30>
+      <ion-card text-center>
+        <ion-card-header>Intake</ion-card-header>
+        <img class="logo" src="images/intake-small.svg" />
+        <ion-row>
+         <p class="bottom-stat incomplete-percent">25% Complete</p>
+        </ion-row>
+    </ion-card>
+  </ion-col>
+</ion-row>
+</ion-container>
+</div>
 </ion-content>
-
-
-<!-- <input [(ngModel)]="name">
-<p>Hello {{name}}</p> -->
