started forms and added footer

--- a/app/pages/patient-detail/patient-detail.html
+++ b/app/pages/patient-detail/patient-detail.html
@@ -90,4 +90,13 @@
 </ion-row>
 </ion-container>
 </div>
+
+<!-- <ion-footer-bar>
+    <button light (click)="goToConsent()">Consent form <ion-icon [name]="myIcon"></ion-icon></button>
+</ion-footer-bar> -->
+
+
 </ion-content>
+<ion-footer-bar class="orange-footer">
+  <button clear (click)="goToConsent()" style="color:white;">Launch Forms</button>
+</ion-footer-bar>
