--- a/app/pages/consent/consent.html
+++ b/app/pages/consent/consent.html
@@ -9,7 +9,17 @@
 </ion-navbar>
 
 <ion-content padding class="consent">
-  
+  <p class="treatment">Treatment and Medication History Consent and Patient Acknowledgment of the Notice of Privacy practices and Consent to Use and Disclose Health Information.</p>
+<p class="consent-text">
+  I consent to all necessary steps taken for examination, diagnosis and treatment. If at any time I have questions about my examination, diagnosis, or treatment, I will not proceed until my questions have been answered so that I am fully informed. I understand that giving the providers and nurses all relevant information is important to my proper diagnosis and treatment. I understand complete compliance with my provider's instructions is critical to the success of any treatment prescribed.</p>
+
+<p class="consent-text">If required by law, I acknowledge that I was provided with an opportunity of a copy of the Premise Health Notice of Privacy Practices regarding uses and disclosures of information regarding me and my health (“Health Information”). I hereby consent to the use and disclosure of my health information, for the purposes and activities permitted under the federal privacy and state privacy laws, which are described in the Premise Health Notice of Privacy Practices.
+I specifically authorize the release, to the fullest extent permitted by law, for treatment, payment or operations purposes as described in the Notice of Privacy Practices, of information regarding the results of any HIV/AIDS testing or treatment, mental health treatment and substance abuse treatment.</p>
+
+<p class="consent-text">I authorize Premise Health to release my health information to my health plan or to a health and wellness provider approved by my health plan for purposes of advising me concerning appropriate measures to maintain or improve my health or any condition reflected in my records.
+I authorize Premise Health to release information to my designated insurance plan for the purpose of health plan administration, including receiving or making payment for services rendered on my behalf. I understand a patient is responsible for all charges incurred, subject to contract and program rules, regardless of my insurance status. If it becomes necessary to send this account to collections, the patient will be responsible for all additional charges.</p>
+
+<p class="consent-text"> I have read and do understand the above information.</p>
 </ion-content>
 <ion-footer-bar class="orange-footer">
   <button clear (click)="goToIntake()" style="color:white;">I have read and agree to the Premise Health Consent to Care Agreement</button>
