updated to v8 beta

--- a/app/pages/intake-forms/intake-forms.html
+++ b/app/pages/intake-forms/intake-forms.html
@@ -9,5 +9,11 @@
 </ion-navbar>
 
 <ion-content padding class="intake-forms">
-  
+  <h2> Medical Procedures </h2>
+  <h4> Understanding your past medical procedres </h4> 
+
+  <h4>Have you ever had any of the following?</h4>
+
+
+
 </ion-content>
