--- a/app/pages/patient-detail/patient-detail.html
+++ b/app/pages/patient-detail/patient-detail.html
@@ -42,14 +42,9 @@
   		   <!--  <button class="button button-block block-btn" (click)="verified($event)">Verify</button> -->
           <button class="button button-block" [class.my-class]="!active" (click)="buttonClick()">Verify</button>
 
-
-
-   <!--  <div>
-      <button [class.my-class]="!isClassVisible" (click)="isClassVisible = !isClassVisible;">
-        Verify
-      </button>
-    </div> -->
-  		
+<!-- <button id="addToFav" onclick="addToFavorites();" value="1">Add to Favorites</button>
+ -->
+  
       </ion-row>
 
 
