--- a/app/pages/intake-forms/intake-forms.html
+++ b/app/pages/intake-forms/intake-forms.html
@@ -9,13 +9,18 @@
 </ion-navbar>
 
 <ion-content padding class="intake-forms">
+ <ion-container>
+
+<ion-row width-100>
+<ion-col>
   <h2 class="title-type"> Medical Procedures </h2>
   <h5 class="description"> Understanding your past medical procedures helps your provider understand your future health risks. </h5> 
   <h4 class="questions">Have you ever had any of the following?</h4>
 
-
-<ion-container>
+  <ion-grid>
 <ion-row>
+   <ion-col width-60>
+      <ion-row class="questions">
  <ion-item class="button button-block" [ngClass]="{active: isOn, disabled: isDisabled}" 
          (click)="toggle(!isOn)">
          Click me!
@@ -28,19 +33,61 @@
          (click)="toggle(!isOn)">
          Click me!
      </ion-item>
+      </ion-row>
+  </ion-col>
 
-  <ion-col width-10 class="dodo">
-  <p> <img src = "images/multi-select.png"/></p> <br>
-   <p> <img src = "images/multi-select.png"/></p> <br>
-   <p> <img src = "images/multi-select.png"/></p> <br>
-   <p> <img src = "images/multi-select.png"/></p> <br>
-  </ion-col> 
+    <ion-col width-20 class="round-btn">
+      <ion-item class="button button-block round-btn" [ngClass]="{active: isOn, disabled: isDisabled}" 
+         (click)="toggle(!isOn)">
+        None
+     </ion-item>
+    </ion-col>  
 
 </ion-row>
+</ion-grid>
 
+<ion-grid>
+<ion-row>
+   <ion-col width-60>
+      <ion-row class="questions multiple">
+ <ion-item class="button button-block" [ngClass]="{active: isOn, disabled: isDisabled}" 
+         (click)="toggle(!isOn)">
+         Click me!
+     </ion-item>
+<ion-item class="button button-block" [ngClass]="{active: isOn, disabled: isDisabled}" 
+         (click)="toggle(!isOn)">
+         Click me!
+     </ion-item>
+<ion-item class="button button-block" [ngClass]="{active: isOn, disabled: isDisabled}" 
+         (click)="toggle(!isOn)">
+         Click me!
+     </ion-item>
+      </ion-row>
+  </ion-col>
+
+    <ion-col width-20> </ion-col>  
+
+</ion-row>
+</ion-grid>
+
+</ion-col>
+
+<ion-col width-10 class="following-img">
+   <img class="following" src = "images/multi-select.png"/> <br>
+    <img class="following" src = "images/multi-select.png"/> <br>
+   <img class="following" src = "images/multi-select.png"/> <br>
+    <img class="following" src = "images/multi-select.png"/> <br>
+     <img class="following" src = "images/multi-select.png"/> <br>
+      <img class="following" src = "images/multi-select.png"/> <br>
+  </ion-col> 
+</ion-row>
 
 </ion-container>
-
+    <!-- <div class="row">
+      <div class="col-75 col-offset-25">
+        <button class="button button-block button-energized">ROW THREE</button>
+      </div>
+    </div> -->
 
 <!-- <button [bgClass] = "bgClass=='background' ? 'background2' : 'background'";>TESTY</button>
  -->
