--- a/app/pages/checkin/checkin.html
+++ b/app/pages/checkin/checkin.html
@@ -5,14 +5,17 @@
 </ion-navbar>
 
 <ion-content padding class="checkin">
-<p class="statusLeft"><strong>8AM</strong><span class="statusRight"><strong>127</strong> Booked | <strong>56</strong> Checked-In</span></p>
 
 <ion-list>
         <ion-item>
             <ion-input type="text" placeholder="Search for a patient..." (input)="search($event, searchKey)">
             </ion-input>
         </ion-item>
-        <ion-item *ngFor="#patient of patients" (click)="itemTapped($event, patient)">
+</ion-list>
+<p class="statusLeft"><strong>8AM</strong><span class="statusRight"><strong>127</strong> Booked | <strong>56</strong> Checked-In</span></p>
+
+<ion-list>
+        <ion-item *ngFor="let patient of patients | slice:0:4, let i=index" (click)="itemTapped($event, patient)">
             <ion-avatar item-left>
                 <img src="{{patient.picture}}"/>
             </ion-avatar>
@@ -20,4 +23,18 @@
             <h4><span class='statusRight'>{{patient.doctor}}</span></h4>
         </ion-item>
     </ion-list>
+
+<p class="statusLeft"><strong>9AM</strong></p><!-- <span class="statusRight"><strong>127</strong> Booked | <strong>56</strong> Checked-In</span></p> -->
+
+<ion-list>
+        
+        <ion-item *ngFor="let patient of patients | slice:5:14, let i=index" (click)="itemTapped($event, patient)">
+            <ion-avatar item-left>
+                <img src="{{patient.picture}}"/>
+            </ion-avatar>
+            <h2>{{patient.firstName}} {{patient.lastName}}</h2>
+            <h4><span class='statusRight'>{{patient.doctor}}</span></h4>
+        </ion-item>
+    </ion-list>
+
 </ion-content>
